BULK-WCRP-Updates-Draft1

--- a/references.bib
+++ b/references.bib
@@ -85,6 +85,22 @@
   year    =  2011
 }
 
+@article{Casselman,
+  title   = "Bulkley/Fulton Watershed Fish Passage Culvert Assessment Program",
+  author  = "Casselman, J., and D. Stanley",
+  year    =  2010
+}
+
+@article{Chudyk1979,
+  title   = "Suskwa River Steelhead Trout: The Colonization of Harold-Price Creek with Hatchery-Reared Steelhead",
+  author  = "Chudyk, W.E",
+  journal = "Skeena Fisheries Report",
+  volume  =  79-1,
+  year    =  1979,
+  address = "https://data.skeenasalmon.info/dataset/e59016eb-fff5-403f-96d7-31d828a75808/resource/c34a5581-54e0-433a-a569-54150b8681aa/download/suskwa_river_steelhead_trout_colonization_harold-price_creek_hatchery-reared_steelhead.pdf"
+}
+
+
 @book{Cooney2006-qf,
   title   = "Appendix C: Interior Columbia basin stream type Chinook Salmon and
              Steelhead populations: habitat intrinsic potential analysis.
@@ -130,7 +146,29 @@
   title  = "Fish habitat inventory and information program - stream summary information.",
   author = "DFO",
   year   =  1991,
-  publisher = "DFO"
+  publisher = "http://gitxsan.ca/release-gitxsan-chiefs-extend-fishing-ban-to-2020-season-urge-canada-bc-and-flnro-to-step-up/"
+}
+
+@book{Gitxsan2019,
+  title  = "Release: Gitxsan chiefs Extend Fishing Ban to 2020 & Urge Canada, BC and Ministries to Step Up",
+  author = "Gitxsan Hulwip Government",
+  year   =  2019,
+  address = "http://gitxsan.ca/release-gitxsan-chiefs-extend-fishing-ban-to-2020-season-urge-canada-bc-and-flnro-to-step-up/"
+}
+
+@book{Irvine2018,
+  title  = "Analysis and priority identification of existing fish passage data: Bulkley River",
+  author = "Irvine, A",
+  year   =  2018,
+  address = "http://a100.gov.bc.ca/pub/acat/public/viewReport.do?reportId=56648"
+}
+
+@book{Irvine2021,
+  title  = "Bulkley River and Morice River Watershed Groups Fish Passage Restoration Planning",
+  author = "Irvine, A",
+  prepared = "Prepared on behalf of Society for Ecosystem Restoration Northern BC",
+  year   =  2021,
+  address = "http://a100.gov.bc.ca/pub/acat/public/viewReport.do?reportId=56648"
 }
 
 @article{Mazany-Wright2021-rz,
@@ -139,16 +177,18 @@
   author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
              Rebellato, B",
   journal = "Canadian Wildlife Federation",
+  volume = "a",
   year    =  2021
 }
 
 @article{Mazany-Wright2021-do,
-  title   = "Fish Passage Restoration Initiative Target Watershed Selection
+  title   = "B.C. Fish Passage Restoration Initiative Target Watershed Selection
              Process: Technical Documentation",
   author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
              Rebellato, B",
   journal = "Canadian Wildlife Federation",
-  year    =  2021
+  volume = "b",
+  year   =  2021
 }
 
 @article{Mazany-Wright2021-hs,
@@ -158,6 +198,12 @@
              Lapointe, N W",
   journal = "Canadian Wildlife Federation",
   year    =  2021
+}
+
+@article{Mccarthy2015,
+  title  = "2015 Inventory of High Priority Culverted Fish Passage Barriers in the Lower/Middle Skeena, Bulkley, Morice, and Babine River Watersheds.",
+  author = "McCarthy, M., and A. Fernando",
+  year   =  2015,
 }
 
 @article{Mcmahon1983-rz,
@@ -190,8 +236,16 @@
   publisher = "https://nstq.ca/wp-content/uploads/2019/09/Lexeyem_Fall-2019_Final.pdf."
 }
 
+@book{OfficeWetsuweten2013,
+  title  = "Wet’suwet’en Title and Rights Regarding Canada 
+            Department of Fisheries & Oceans and Pacific Trails Pipeline",
+  author = "Office of the Wet’suwet’en",
+  year   =  2013,
+  address = "http://www.wetsuweten.com/files/PTP_FHCP_Response_to_DFO-25Nov13-Final.pdf."
+}
+
 @book{PSF2020-tl,
-  title  = " Methods for Assessing Status and Trends in Pacific Salmon Conservation Units and their Freshwater Habitats. The Pacific Salmon Foundation, Vancouver, British Columbia.",
+  title  = "Methods for Assessing Status and Trends in Pacific Salmon Conservation Units and their Freshwater Habitats. The Pacific Salmon Foundation, Vancouver, British Columbia.",
   author = "Pacific-Salmon-Foundation",
   year   =  2020,
   publisher = "PSF"
@@ -213,6 +267,14 @@
   author = "Raleigh, R F and Miller, W J",
   year   =  1986,
   publisher = "USFW"
+}
+
+@book{Rescan2012,
+  title  = "KSM Project: Gitxsan Nation Traditional Knowledge and Use Desk-based Research Report",
+  year   =  2012,
+  publisher = "Rescan Environmental Services Ltd",
+  prepared = "Prepared for Seabridge Gold Inc. by Rescan Environmental Services Ltd.",
+  address = "https://www.ceaa.gc.ca/050/documents_staticpost/49262/89282/Chapter_30_Appendices/Appendix_30-D_Gitxsan_Tradnl_Use_Desk_Based_Research_Report.pdf",
 }
 
 @book{Roberge2002-xq,
@@ -272,6 +334,17 @@
   address   = "Cham"
 }
 
+@article{Seliger2018-be,
+  title     = "River connectivity, habitat fragmentation and related
+               restoration measures",
+  booktitle = "Riverine Ecosystem Management",
+  author    = "Seliger, Carina and Zeiringer, Bernhard",
+  publisher = "Springer International Publishing",
+  pages     = "171--186",
+  year      =  2018,
+  address   = "Cham"
+}
+
 @book{Sheer2009-kb,
   title  = "Development and management of fish intrinsic potential data and
             methodologies: State of the {IP} 2008 summary report",
@@ -292,7 +365,14 @@
   number    =  6,
   pages     = "1654--1669",
   month     =  nov,
-  year      =  2006
+  year      =  2003
+}
+
+@article{Schindler2003,
+  title     = "The importance of marine-derived nutrients to lake 
+              productivity and salmon population dynamics over the last five centuries in southwest Alaska",
+  author    = "Schindler, D. E. P. R. Leavitt, C. Brock, S. P. Johnson, and P. D. Quay",
+  year      =  2003
 }
 
 @article{Sloat2017-bp,
@@ -310,6 +390,24 @@
   language  = "en"
 }
 
+@article{Smith2018,
+  title     = "Assessing Barriers to Fish Passage within the Wet'suwet'en First Nation Traditional Territory",
+  author    = "Smith, J",
+  year      =  2018,
+  publisher = "LGL Limited Environmental Research Associates and Yinka Dene Economic Development Limited Partnership Inc",
+
+}
+
+@article{SSAF2021,
+  title     = "Skeena Sustainability Assessment Forum’s 
+              State of the Value Report for Fish & Fish Habitat",
+  author    = "[SSAF] Skeena Sustainability Assessment Forum",
+  year      = 2021,
+  prepared = "Final draft prepared by Carolyn King and Jesse Fraser of Ministry of Forests, Lands, 
+              Natural Resource Operations, and Rural Development for the Skeena Environmental Stewardship Initiative Science and Technical Committee (STC)",
+
+}
+
 @book{WLFN2021Patterns,
   title  = "Secwepemc Land Use Patterns.",
   author = "Williams Lake First Nation.",
@@ -321,7 +419,14 @@
   title  = "Archaeological Overview Assessment Northern Secwepemc Traditional Territory.",
   author = "Wilson, I. R. and Twohig, K. and Dahlstrom, B.",
   year   =  1998,
-  publisher = "https://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/natural-resource-use/archaeology/forms-publications/aoa_-_williams_lake_-_northern_secwepemc_traditional_territory_-_1998_report.pdf."
+  address = "https://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/natural-resource-use/archaeology/forms-publications/aoa_-_williams_lake_-_northern_secwepemc_traditional_territory_-_1998_report.pdf."
+}
+
+@book{Wilson2007,
+  title  = "Fish Passage Assessment of Highway 16 and CN Rail in the Bulkley Watershed.",
+  author = "Wilson, T., and K. Rabnet.",
+  year   =  2007,
+  address = "https://data.skeenasalmon.info/dataset/fish-passage-assessment-highway-16-cn-rail-bulkley."
 }
 
 @book{Woll2017-vf,
