--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -1,10 +1,10 @@
 # Connectivity Status Assessment and Goals {-}
 
-## Connectivity Status Assessment {-}
+## Key Ecological Attributes and Current Connectivity Status {-}
 
-The planning team devised two Key Ecological Attributes (KEAs) and associated indicators to assess the current connectivity status of the watershed – Accessible Habitat and Accessible Overwintering Habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmon ecology that are being targeted by this WCRP. The connectivity status of Anadromous Salmon was used to establish goals to improve habitat connectivity in the watershed and will be the baseline against which progress is tracked over time. 
+The planning team devised two Key Ecological Attributes (KEAs) and associated indicators to assess the current connectivity status of the watershed – Accessible Spawning Habitat and Accessible Rearing Habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmonid ecology that are being targeted by this WCRP. The connectivity status for the Anadromous Salmonid KEAs were used to establish goals to improve habitat connectivity in the watershed and will be the baseline against which progress is tracked over time. 
 
-The current connectivity status assessment relies on GIS analyses to map known and modelled barriers to fish passage, identify stream reaches that have potential spawning and rearing habitat, estimate the proportion of habitat that is currently accessible to target species, and prioritize barriers for field assessment that would provide the greatest gains in connectivity. To support a flexible prioritization framework to identify priority barriers in the watershed, two assumptions are made: 1,any modelled (i.e., passability status is unknown) or partial barriers are treated as complete barriers to passage and 2, the habitat modelling is binary, it does not assign any habitat quality values. As such, the current connectivity status will be refined over time as more data on habitat and barriers are collected. For more detail on how the connectivity status assessments were conducted, see Appendix B. 
+The current connectivity status assessment relies on GIS analyses to map known and modelled barriers to fish passage, identify stream reaches that have potential spawning and rearing habitat, estimate the proportion of habitat that is currently accessible to target species, and prioritize barriers for field assessment that would provide the greatest gains in connectivity. To support a flexible prioritization framework to identify priority barriers in the watershed, two assumptions are made: 1) any modelled (i.e., passability status is unknown) or partial barriers are treated as complete barriers to passage and 2) the habitat modelling is binary, it does not assign any habitat quality values. As such, the current connectivity status will be refined over time as more data on habitat and barriers are collected. For more detail on how the connectivity status assessments were conducted, see Appendix B.
 
 ```{python}
 #| echo: false
@@ -84,7 +84,7 @@ sum_road = barrier_severity('ROAD, RESOURCE/OTHER')[1] + barrier_severity('ROAD,
 
 ```{python echo=FALSE}
 #| label: tbl-connectivity
-#| tbl-cap: "Connectivity status assessment for (a) linear habitat (spawning and rearing) and (b) overwintering habitat in the Horsefly River watershed. The Available Habitat KEA is evaluated by dividing the length of linear habitat that is currently accessible to target species by the total length of all linear habitat in the watershed. The Available Overwintering Habitat KEA is evaluated as the sum of all areal overwintering habitat that is accessible to target species."
+#| tbl-cap: "Connectivity status assessment for spawning (a) and rearing (b) habitat in the Bulkley River watershed. The two KEAs - Accessible Spawning Habitat and Accessible Rearing Habitat - are evaluated by dividing the length of linear habitat (of each type) that is currently accessible to target species by the total length of all linear habitat (of each type) in the watershed."
 #| warning: false
 #| echo: false
 
@@ -96,11 +96,11 @@ import warnings
 warnings.filterwarnings('ignore')
 
 df = pd.DataFrame({"Target Species":["Andromous Salmon"," "],
-                   "KEA":["Available Habitat"," "],
-                   "Indicator":["% of total linear habitat","Current Status:"],
-                   "Poor":["<80%"," "],
-                   "Fair":["  "," "],
-                   "Good":["81-90%"," "],
+                   "KEA":["Available Spawning Habitat"," "],
+                   "Indicator":["% of total spawning habitat","Current Status:"],
+                   "Poor":["<50%"," "],
+                   "Fair":["51-75%"," "],
+                   "Good":["76-90%"," 88%"],
                    "Very Good":[">90%", watershed_connectivity("ALL")]
                    })
 
@@ -111,11 +111,11 @@ def highlighttab7(val):
     lgreen = '#92d050;'
     dgreen = '#03853e;'
 
-    if val=="<80%" : color = red
-    elif val[0:].isdigit() and int(val) < 80 : color = red
-    elif val=="  ": color = yellow
-    elif val=="81-90%"  : color = lgreen
-    elif val[0:].isdigit() and (int(val) >= 80 and int(val) < 90) : color = lgreen 
+    if val=="<50%" : color = red
+    elif val[0:].isdigit() and int(val) < 76 : color = red
+    elif val=="51-75%": color = yellow
+    elif val=="76-90%"  : color = lgreen
+    elif val[0:].isdigit() and (int(val) >= 76 and int(val) < 90) : color = lgreen 
     elif val ==">90%": color = dgreen
     elif val[0:].isdigit() and int(val) >= 90 : color = dgreen 
     elif val == "Current Status:" : return "font-weight: bold"
@@ -129,7 +129,7 @@ df.style.applymap(highlighttab7).set_table_styles(
    }]).hide()
 ```
 
-**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team, including the decision not to define Fair. The current status is based on the CWF Barrier Prioritization Model output, which is current as of March 2022.
+**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022.
 
 ```{python echo=FALSE}
 #| warning: false
@@ -144,12 +144,12 @@ import matplotlib as mpl
 warnings.filterwarnings('ignore')
 
 df = pd.DataFrame({"Target Species":["Andromous Salmon",""],
-                   "KEA":["Available Overwintering Habitat",""],
-                   "Indicator":["Total Area (m2) of overwintering habitat accessible","Current Status:"],
-                   "Poor":["?",""],
-                   "Fair":[" ?",""],
-                   "Good":["? ",""],
-                   "Very Good":[" ? ",""]
+                   "KEA":["Available Rearing Habitat",""],
+                   "Indicator":["% of total rearing habitat","Current Status:"],
+                   "Poor":["<50%"," "],
+                   "Fair":["51-75%"," 70%"],
+                   "Good":["76–90%"," "],
+                   "Very Good":[">90%"," "]
                    })
 
 def highlighttab7b(val):
@@ -158,12 +158,12 @@ def highlighttab7b(val):
     lgreen = '#92d050;'
     dgreen = '#03853e;'
 
-    if val=="?" : color = red
-    elif val[0:].isdigit() and int(val) < 80 : color = red
-    elif val==" ?": color = yellow
-    elif val=="? "  : color = lgreen
-    elif val[0:].isdigit() and (int(val) >= 80 and int(val) < 90) : color = lgreen 
-    elif val ==" ? ": color = dgreen
+    if val=="<50%" : color = red
+    elif val[0:].isdigit() and int(val) < 76 : color = red
+    elif val=="51-75%": color = yellow
+    elif val=="76–90%"  : color = lgreen
+    elif val[0:].isdigit() and (int(val) >= 76 and int(val) < 90) : color = lgreen 
+    elif val ==">90%": color = dgreen
     elif val[0:].isdigit() and int(val) >= 90 : color = dgreen 
     elif val == "Current Status:" : return "font-weight: bold"
     else: color = 'white'
@@ -178,14 +178,14 @@ df.style.applymap(highlighttab7b).set_table_styles(
 
 ```
 
-**Comments:** No baseline data exists on the extent of overwintering habitat in the watershed. A priority action is included in the Operational Plan (strategy 2.3) to develop a habitat layer, and this will be used to inform this connectivity status assessment in the future.
+**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022. 
 
 
 ## Goals {-}
 
 ```{python echo=FALSE}
 #| label: tbl-goals
-#| tbl-cap: "Goals to improve (1) spawning and rearing and (2) overwintering habitat connectivity for target species in the Horsefly River watershed over the lifespan of the WCRP (2021-2040). The goals were established through discussions with the planning team and represent the resulting desired state of connectivity in the watershed. The goals are subject to change as more information and data are collected over the course of the plan timeline (e.g., the current connectivity status is updated based on barrier field assessments)."
+#| tbl-cap: "Goals to improve spawning (1) and rearing (2) habitat connectivity for target species in the Bulkley River watershed over the lifespan of the WCRP (2021-2031). The goals were established through discussions with the planning team and represent the resulting desired state of connectivity in the watershed. The goals are subject to change as more information and data are collected over the course of the plan timeline (e.g., the current connectivity status is updated based on barrier field assessments)."
 #| warning: false
 #| echo: false
 
@@ -197,8 +197,8 @@ import pandas as pd
 import numpy as np
 
 df = pd.DataFrame({"Goal #": [1,2],
-                   "Goal": ["By 2040, the percent (%) of total linear habitat accessible to anadromous salmon will increase from 94% to 96% within the Horsefly River watershed (i.e., reconnect at least 11.7 km of habitat).",
-                            "By 2024, the total area of overwintering habitat accessible to Anadromous Salmon will increase by 1,500 m2 within the Horsefly River watershed. "]
+                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat accessible to anadromous salmonids will increase from 88% to 95% within the Bulkley River watershed (i.e., reconnect at least 86 km of spawning habitat).",
+                            "By 2031, the percent (%) of total linear rearing habitat accessible to anadromous salmonids will increase from 70% to 80% within the Bulkley River watershed (i.e., reconnect at least 211 km of rearing habitat). "]
                     })
 
 data = df.style.hide().set_properties(**{'text-align': 'left'})
