--- a/content/project-partners.qmd
+++ b/content/project-partners.qmd
@@ -1,4 +1,4 @@
-<!-- # Horsefly River Watershed Secwepemcúl’ecw Connectivity Remediation Plan: 2021 - 2040 {-} -->
+<!-- # Bulkley River Watershed (Laxyip | Wedzin Kwah) Connectivity Remediation Plan: 2021 - 2031 {-} -->
 
 ## Project Partners {-}
 
@@ -6,7 +6,7 @@
 
 ```{r echo = FALSE}
 #| label: tbl-planteam
-#| tbl-cap: "Horsefly River watershed WCRP planning team members. Planning team members contributed to the development of this plan by participating in a series of workshops and document and data review. The plan was generated based on the input and feedback of the local groups and organizations listed in this table."
+#| tbl-cap: "Bulkley River watershed WCRP planning team members. Planning team members contributed to the development of this plan by participating in a series of workshops and document and data review. The plan was generated based on the input and feedback of the local groups and organizations list in this table."
 #| warning: false
 
 library("flextable")
@@ -23,7 +23,7 @@ ft |> autofit()
 
 ```{r keyact, echo = FALSE, results = 'asis'}
 #| label: tbl-keyact
-#| tbl-cap: "Additional Key Actors in the Horsefly River watershed. Key Actors are the individuals, groups, and/or organizations, outside of the planning team, with influence and relevant experience in the watershed, whose engagement will be critical for the successful implementation of this WCRP."
+#| tbl-cap: "Additional Key Actors in the Bulkley River watershed. Key Actors are the individuals, groups, and/or organizations, outside of the planning team, with influence and relevant experience in the watershed, whose engagement will be critical for the successful implementation of this WCRP."
 #| warning: false
 
 library("flextable")
