--- a/content/references.qmd
+++ b/content/references.qmd
@@ -1,4 +1,4 @@
-<!-- # Horsefly River Watershed Secwepemcúl’ecw Connectivity Remediation Plan: 2021 - 2040 {-} -->
+<!-- # Bulkley River Watershed (Laxyip | Wedzin Kwah) Connectivity Remediation Plan: 2021 - 2031 {-} -->
 
 # References {.unnumbered}
 
