--- a/content/work-planning.qmd
+++ b/content/work-planning.qmd
@@ -1,10 +1,8 @@
 # Work Planning {-}
 
-## Annual Progress Report {-}
-
 ## Operational Plan {-}
 
-The operational plan represents a preliminary exercise undertaken by the planning team to identify the potential leads, potential participants, and estimated cost for the implementation of each action in the Horsefly River watershed. The table below summarizes individuals, groups, or organizations that the planning team felt could lead or participate in the implementation of the plan and should be interpreted as the first step in on-going planning and engagement to develop more detailed and sophisticated action plans for each entry in the table. The individuals, groups, and organizations listed under the "Lead(s)" or "Potential Participants" columns are those that provisionally expressed interest in participating in one of those roles or were suggested by the planning team for further engagement (denoted in bold), for those that are not members of the planning team. The leads, participants, and estimated costs in the operational plan are not binding nor an official commitment of resources, but rather provide a roadmap for future coordination and engagement to work towards implementation of the WCRP.
+The operational plan represents a preliminary exercise undertaken by the planning team to identify the potential leads, potential participants, and estimated cost for the implementation of each action in the Bulkley River watershed. The table below summarizes individuals, groups, or organizations that the planning team felt could lead or participate in the implementation of the plan and should be interpreted as the first step in on-going planning and engagement to develop more detailed and sophisticated action plans for each entry in the table. The individuals, groups, and organizations listed under the "Lead(s)" or "Potential Participants" columns are those that provisionally expressed interest in participating in one of those roles or were suggested by the planning team for further engagement (denoted in bold), for those that are not members of the planning team. The leads, participants, and estimated costs in the operational plan are not binding nor an official commitment of resources, but rather provide a roadmap for future coordination and engagement to work towards implementation of the WCRP.
 
 ```{python echo=FALSE}
 #| label: tbl-S1
@@ -36,7 +34,7 @@ def highlighttab7(val):
 
 ```{python opplan, echo=FALSE}
 #| label: tbl-opplan
-#| tbl-cap: "Operational plan to support the implementation of strategies and actions to improve connectivity for target species in the Horsefly River watershed."
+#| tbl-cap: "Operational plan to support the implementation of strategies and actions to improve connectivity for target species in the Bulkley River watershed."
 #| warning: false
 #| echo: false
 
@@ -53,7 +51,7 @@ data = pd.read_csv('data/operational-plan.csv', index_col=False)
 
 data = data.replace(np.nan, '', regex=True)
 
-rows = pd.IndexSlice[[0,10,16,23,26,29,30,31], :]
+rows = pd.IndexSlice[[0,10,13,18,23,24], :]
 
 data = data.style.applymap(df_operation, subset=rows).hide().set_properties(**{'text-align': 'left'})
 data.set_table_styles(
@@ -63,14 +61,12 @@ data.set_table_styles(
    }])
 
 ```
-
+## Funding Sources {-}
 ```{r fund, echo = FALSE, results = 'asis'}
 #| label: tbl-fund
-#| tbl-cap: "Potential funding sources for plan implementation in the Horsefly River watershed. The Canadian Wildlife Federation and the planning team can coordinate proposal submission through these sources."
+#| tbl-cap: "Potential funding sources for plan implementation in the Bulkley River watershed. The Canadian Wildlife Federation and the planning team can coordinate proposal submission through these sources."
 #| warning: false
 
 library("flextable")
 
 ```
-
-## Annual Work Plan {-}
