--- a/references.bib
+++ b/references.bib
@@ -239,7 +239,7 @@
 @book{OfficeWetsuweten2013,
   title  = "Wet’suwet’en Title and Rights Regarding Canada 
             Department of Fisheries & Oceans and Pacific Trails Pipeline",
-  author = "Office of the Wet’suwet’en",
+  author = "{Office of the Wet’suwet’en}",
   year   =  2013,
   address = "http://www.wetsuweten.com/files/PTP_FHCP_Response_to_DFO-25Nov13-Final.pdf."
 }
@@ -271,6 +271,7 @@
 
 @book{Rescan2012,
   title  = "KSM Project: Gitxsan Nation Traditional Knowledge and Use Desk-based Research Report",
+  author = "Rescan",
   year   =  2012,
   publisher = "Rescan Environmental Services Ltd",
   prepared = "Prepared for Seabridge Gold Inc. by Rescan Environmental Services Ltd.",
@@ -401,7 +402,7 @@
 @article{SSAF2021,
   title     = "Skeena Sustainability Assessment Forum’s 
               State of the Value Report for Fish & Fish Habitat",
-  author    = "[SSAF] Skeena Sustainability Assessment Forum",
+  author    = "SSAF",
   year      = 2021,
   prepared = "Final draft prepared by Carolyn King and Jesse Fraser of Ministry of Forests, Lands, 
               Natural Resource Operations, and Rural Development for the Skeena Environmental Stewardship Initiative Science and Technical Committee (STC)",
