--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -85,7 +85,7 @@ gain <- py$gain
 
 ```
 
-## Appendix C: Bulkley River Watershed Barrier Prioritization Summary {-}
+## Bulkley River Watershed Barrier Prioritization Summary {-}
 
 The primary conservation outcome of the WCRP is the remediation of barriers to connectivity in the Bulkley River watershed. To achieve Goals 1 and 2 in this plan, it is necessary to prioritize and identify a suite of barriers that, if remediated, will provide access to a minimum of 86 km of spawning habitat and 211 km of rearing habitat (@tbl-table16):
 
