--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -328,14 +328,14 @@ def condition(pct):
 #rating classifier
 def rating(threat, barrier):
     if threat == "extent":
-        if barrier == "DAM":
+        if barrier != "ROAD":
             pct = barrier_extent(barrier)[1]
             rating = condition(pct)
         elif barrier == "ROAD":
             pct = barrier_extent('ROAD, RESOURCE/OTHER')[1] + barrier_extent('ROAD, DEMOGRAPHIC')[1]
             rating = condition(pct)
     elif threat == "severity":
-        if barrier == "DAM":
+        if barrier != "ROAD":
             pct = barrier_severity(barrier)[2]
             rating = condition(pct)
         elif barrier == "ROAD":
@@ -343,16 +343,11 @@ def rating(threat, barrier):
             rating = condition(pct)
             
     return rating
-            
-
-        
-
-
-
+      
 
 df = pd.DataFrame({"Barrier Types":["Road-Stream Crossings","Rail-stream Crossings", "Natural Barriers","Lateral Barriers","Large Dams(>3m height)","Small Dams(<3m height)","Trail-stream Crossings"],
-                   "Extent":["High", "Low","Medium", "Medium","Low","Low","Medium"],
-                   "Severity":["Very High", "Low","Very High", "High","Very High","Very High","Medium"],
+                   "Extent":[rating("extent", "ROAD"), rating("extent", "RAIL"),"Medium", "Medium",rating("extent", "DAM"), rating("extent", "DAM"),rating("extent", "TRAIL")],
+                   "Severity":[rating("severity", "ROAD"), rating("severity", "RAIL"),"Very High", "High",rating("severity", "DAM"),rating("severity", "RAIL"),rating("severity", "TRAIL")],
                    "Irreversibility":["Medium", "Medium","Medium", "Medium","High","Medium","Low"],
                    "Overall Threat Rating:":["High", "High","Medium", "Medium","Low","Low","Low"]
                    }).style.set_properties(subset=["Overall Threat Rating:"], **{'font-weight': 'bold'})
