--- a/references.bib
+++ b/references.bib
@@ -163,13 +163,6 @@
   address = "http://a100.gov.bc.ca/pub/acat/public/viewReport.do?reportId=56648"
 }
 
-@book{Irvine2021,
-  title  = "Bulkley River and Morice River Watershed Groups Fish Passage Restoration Planning",
-  author = "Irvine, A",
-  prepared = "Prepared on behalf of Society for Ecosystem Restoration Northern BC",
-  year   =  2021,
-  address = "http://a100.gov.bc.ca/pub/acat/public/viewReport.do?reportId=56648"
-}
 
 @article{Mazany-Wright2021-rz,
   title   = "A Freshwater Connectivity Modelling Framework to Support Barrier
@@ -177,18 +170,7 @@
   author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
              Rebellato, B",
   journal = "Canadian Wildlife Federation",
-  volume = "a",
-  year    =  2021
-}
-
-@article{Mazany-Wright2021-do,
-  title   = "B.C. Fish Passage Restoration Initiative Target Watershed Selection
-             Process: Technical Documentation",
-  author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
-             Rebellato, B",
-  journal = "Canadian Wildlife Federation",
-  volume = "b",
-  year   =  2021
+  year    =  2021a
 }
 
 @article{Mazany-Wright2021-hs,
@@ -197,7 +179,22 @@
   author  = "Mazany-Wright, N and Noseworthy, J and Sra, S and Norris, S M and
              Lapointe, N W",
   journal = "Canadian Wildlife Federation",
-  year    =  2021
+  year    =  2021c
+}
+
+@article{Mazany-Wright2021-do,
+  title   = "B.C. Fish Passage Restoration Initiative
+          Target Watershed Selection Process: Technical Documentation",
+  author  = "Mazany-Wright, N., S. M. Norris, N. W. R. Lapointe, and B. Rebellato",
+  journal = "Canadian Wildlife Federation",
+  year    =  2021b
+}
+
+@book{Irvine2021,
+  title  = "Bulkley River and Morice River Watershed Groups Fish Passage Restoration Planning",
+  author = "Irvine, ",
+  year   =  2018,
+  address = "https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf"
 }
 
 @article{Mccarthy2015,
